Fixed settings-box z-index order

--- a/css/master.css
+++ b/css/master.css
@@ -17,7 +17,7 @@ body {
   width: 210px;
   min-height: 100vh;
   background-color: #fff;
-  z-index: 1000;
+  z-index: 10000;
   transition: 0.3s;
 }
 .settings-box.show {
